# rust_evm_bot

./: README.md
app/: .gitignore  Cargo.toml  todo.txt
app/abi/: erc20_abi.json
app/alias/: alias_address.json  alias_token.json
app/src/: alias.rs  args.rs  client.rs  loader.rs  main.rs  read.rs  tx.rs  utils.rs
