[package]
name = "univ2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
ethers = { version = "1.0.0", features = ["legacy", "abigen", "rustls", "ws"] }
eyre = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
colored = "2.2.0"
